--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 requests
 pandas
-pandas_ta @ git+https://github.com/twopirllc/pandas-ta.git@development
+git+https://github.com/twopirllc/pandas-ta.git@development
